[gd_scene load_steps=22 format=2]

[ext_resource path="res://gui/placeholdertitlescreen.jpg" type="Texture" id=1]
[ext_resource path="res://fonts/DTNouveau-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/TitleScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.694118, 0.968627, 0.792157, 0.392157 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.694118, 0.968627, 0.792157, 0.392157 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.694118, 0.968627, 0.792157, 0.392157 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.694118, 0.968627, 0.792157, 0.392157 )

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.694118, 0.968627, 0.792157, 0.392157 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.694118, 0.968627, 0.792157, 0.392157 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.694118, 0.968627, 0.792157, 0.392157 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.694118, 0.968627, 0.792157, 0.392157 )

[sub_resource type="StyleBoxEmpty" id=9]

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TitleBackground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="Title" type="Label" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.1
anchor_bottom = 0.1
margin_left = -0.400002
margin_right = 588.6
margin_bottom = 72.0
custom_colors/font_color = Color( 0.862745, 0.486275, 0.32549, 1 )
custom_colors/font_outline_modulate = Color( 0.552941, 0.117647, 0.117647, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0784314, 0.0784314, 1 )
custom_fonts/font = SubResource( 1 )
text = "TBD Dragon Game"

[node name="StartMenuButtons" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.62
anchor_right = 0.1
anchor_bottom = 0.62
margin_right = 280.0
margin_bottom = 200.0
custom_constants/separation = 15

[node name="Start" type="Button" parent="StartMenuButtons"]
margin_right = 280.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 19 )
custom_styles/normal = SubResource( 3 )
text = "    Start Game"
align = 0

[node name="Continue" type="Button" parent="StartMenuButtons"]
margin_top = 50.0
margin_right = 280.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 35 )
custom_colors/font_color_disabled = Color( 0.486275, 0.486275, 0.486275, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 5 )
text = "    Continue"
align = 0

[node name="Options" type="Button" parent="StartMenuButtons"]
margin_top = 100.0
margin_right = 280.0
margin_bottom = 135.0
rect_min_size = Vector2( 0, 35 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 7 )
text = "    Options"
align = 0

[node name="Quit" type="Button" parent="StartMenuButtons"]
margin_top = 150.0
margin_right = 280.0
margin_bottom = 185.0
rect_min_size = Vector2( 0, 35 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 9 )
text = "    Quit"
align = 0

[connection signal="pressed" from="StartMenuButtons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="StartMenuButtons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="StartMenuButtons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="StartMenuButtons/Quit" to="." method="_on_Quit_pressed"]
